--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "bootstrap-portfolio-project",
   "version": "0.0.1",
-  "description": "## Table of Contents",
+  "description": "BudgetCents is a no-frills monthly personal finance tool.",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm run lite",
-    "lite": "lite-server"
+    "lite": "lite-server",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,10 @@
   "homepage": "https://github.com/waynethompsonjr/bootstrap-portfolio-project#readme",
   "devDependencies": {
     "lite-server": "^2.6.1"
+  },
+  "dependencies": {
+    "bootstrap": "^4.5.2",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1"
   }
 }
